--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rhamon&Rânia</title>
 
-    <link rel="stylesheet" href="./src/style.css" />
-    <link rel="stylesheet" href="./src/globol.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./globol.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,15 +31,15 @@
         <div class="container grid">
           <div class="image">
             <img
-              src="./src/assets/images/RR.jpeg"
+              src="./assets/images/RR.jpeg"
               alt="Imagen do Rhamon e Rânya"
             />
           </div>
           <div class="text">
             <h2 class="title">Seja bem vindo ao casamento do Rhamon e Rânya</h2>
-            <p><img src="./src/assets/icon/map-pin.svg" alt="">Rua Joao Kirst 985</p>
-            <p><img src="./src/assets/icon/date.svg" alt="">14/05/2022</p>
-            <p><img src="./src/assets/icon/time.svg" alt="">21:00</p>
+            <p><img src="./assets/icon/map-pin.svg" alt="">Rua Joao Kirst 985</p>
+            <p><img src="./assets/icon/date.svg" alt="">14/05/2022</p>
+            <p><img src="./assets/icon/time.svg" alt="">21:00</p>
             
             <a class="button"
               href="confirm.html"
