--- a/confirm.html
+++ b/confirm.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Corfirm</title>
 
-    <link rel="stylesheet" href="/src/globol.css" />
-    <link rel="stylesheet" href="/src/confirm.css" />
+    <link rel="stylesheet" href="./globol.css" />
+    <link rel="stylesheet" href="./confirm.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,7 +28,7 @@
     <section class="section" id="confirmroom">
       <div class="container grid">
         <div class="image">
-          <img src="assets/images/fotoRR2.jpg" alt="Imagen do Rhamon e Rânya" />
+          <img src="./assets/images/fotoRR2.jpg" alt="Imagen do Rhamon e Rânya" />
         </div>
 
         <div class="text">
