--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
           <div class="text">
             <h2 class="title">Seja bem vindo ao casamento do Rhamon e Rânya</h2>
-            <p><img src="./assets/icon/map-pin.svg" alt="">Rua Joao Kirst 985</p>
+            <p><img src="./assets/icon/map-pin.svg" alt=""> Rua Fernando Abott, 545 - Centro</p>
             <p><img src="./assets/icon/date.svg" alt="">14/05/2022</p>
             <p><img src="./assets/icon/time.svg" alt="">21:00</p>
             
